Fix: horizontal scrollbar appearing when content overflows
+ Darker color for finished tasks

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100svh;
   font-size: 1.1rem;
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -44,29 +44,40 @@ body {
     color 0.3s ease;
 }
 
+#root {
+  width: 100%;
+}
+
 .container {
-  width: 100vw;
-  min-height: 100vh;
+  width: 100%;
+  min-height: 100svh;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
   align-items: stretch;
 }
 
-.container:has(.menu.open) {
-  overflow: hidden;
-}
-
 main {
   background-color: var(--bg-color);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 2rem;
   padding: 0.5rem;
+  padding-top: 1.5rem;
   flex: 1;
   position: relative;
+  max-height: 100vh;
+  overflow: auto;
+}
+
+.menu.open ~ main {
+  max-height: 0vh;
+}
+
+main {
+  transition: max-height 0.6s ease;
 }
 
 main > * {
